Blog posts page ready with pagination and SSG

--- a/data/projects/costotus.mdx
+++ b/data/projects/costotus.mdx
@@ -1,17 +1,32 @@
-### Welcome to costotus
+export const metadata = {
+	title: "Costotus / Manufacturing Cost Calculator",
+	description: "A nice one",
+};
 
-Adipisicing excepteur consectetur officia elit enim fugiat Lorem ullamco labore sit ullamco eiusmod. Est labore ipsum proident qui ut labore. Commodo elit officia reprehenderit mollit adipisicing minim voluptate tempor excepteur officia. Ipsum velit esse do mollit non minim laboris proident do voluptate.
+# Remark-GFM Test
 
-### Welcome to costotus
+Tests are below
 
-Adipisicing excepteur consectetur officia elit enim fugiat Lorem ullamco labore sit ullamco eiusmod. Est labore ipsum proident qui ut labore. Commodo elit officia reprehenderit mollit adipisicing minim voluptate tempor excepteur officia. Ipsum velit esse do mollit non minim laboris proident do voluptate.
+## Autolink literals
 
+www.example.com, https://example.com, and contact@example.com.
 
-### Welcome to costotus
+## Footnote
 
-Adipisicing excepteur consectetur officia elit enim fugiat Lorem ullamco labore sit ullamco eiusmod. Est labore ipsum proident qui ut labore. Commodo elit officia reprehenderit mollit adipisicing minim voluptate tempor excepteur officia. Ipsum velit esse do mollit non minim laboris proident do voluptate.
+A note[^1]
 
+[^1]: Big note.
 
-### Welcome to costotus
+## Strikethrough
 
-Adipisicing excepteur consectetur officia elit enim fugiat Lorem ullamco labore sit ullamco eiusmod. Est labore ipsum proident qui ut labore. Commodo elit officia reprehenderit mollit adipisicing minim voluptate tempor excepteur officia. Ipsum velit esse do mollit non minim laboris proident do voluptate.
+~one~ or ~~two~~ tildes.
+
+## Table
+
+| a   | b   |   c |  d  |
+| --- | :-- | --: | :-: |
+
+## Tasklist
+
+-   [ ] to do
+-   [x] done
