bug fixes and refactor

--- a/data/blog/test.mdx
+++ b/data/blog/test.mdx
@@ -26,3 +26,12 @@ Checkout my React component:
 	<div className="w-32 bg-white p-4">Content 5</div>
 	<div className="w-32 bg-white p-4">Content 6</div>
 </Carousel>
+
+## I even have some code
+
+AS you can se below
+
+```js
+	const data = blogs.find((blog) => blog.id === params.postId);
+	if (!data) return notFound();
+```
