--- a/data/projects/test1.mdx
+++ b/data/projects/test1.mdx
@@ -1,15 +1,15 @@
 export const metadata = {
-	title: "Costotus / Manufacturing Cost Calculator",
+	title: "Test 1 project",
 	description: "A nice one",
 };
 
 export const data = {
-	id: "costotus",
-	title: "Culpa officia velit fugiat ullamco pariatur aute exercitation exercitation consectetur laboris. Elit nulla minim officia ullamco enim consequat aute ad cillum velit sunt ullamco cillum magna. Irure culpa ut occaecat anim sit. Dolor aute in mollit qui aute exercitation laborum amet cillum qui nulla. Veniam commodo nulla in officia.",
-	year: 2020,
+	id: "test1",
+	title: "A nice one",
+	year: 2023,
 	subtitle: "An cost calculator for small businesses",
 	tech: ["React 18", "SPA"],
-	images: ["costotus_01.jpg", "costotus_02.jpg"],
+	images: [],
 	link: "https://www.costotus.com",
 };
 
