Ready for blog & project entries. Initial design complete

--- a/data/posts/nextjs_blog.mdx
+++ b/data/posts/nextjs_blog.mdx
@@ -1,15 +1,15 @@
 export const metadata = {
-	title: "Blog Post 1",
+	title: "How to create a static blog page with next.js and mdx",
 	description: "A nice one",
 };
 
 export const data = {
-	id: "post1",
-	title: "Blog Post 1",
-	date: new Date("2022-12-01"),
+	id: "nextjs_blog",
+	title: "How to create a static blog page with next.js and mdx",
+	date: new Date("2020-12-01"),
 	readDuration: 14,
 	link: { href: "http://www.google.com", text: "Read at Dev.to" },
-	cover: "post1_cover.jpg",
+	cover: "nextjs_blog_cover.jpg",
 	description: "Laboris voluptate minim excepteur laborum.",
 };
 
