--- a/data/projects/costotus.mdx
+++ b/data/projects/costotus.mdx
@@ -5,7 +5,7 @@ export const metadata = {
 
 export const data = {
 	id: "costotus",
-	title: "Culpa officia velit fugiat ullamco pariatur aute exercitation exercitation consectetur laboris. Elit nulla minim officia ullamco enim consequat aute ad cillum velit sunt ullamco cillum magna. Irure culpa ut occaecat anim sit. Dolor aute in mollit qui aute exercitation laborum amet cillum qui nulla. Veniam commodo nulla in officia.",
+	title: "Costotus - Cost Calc",
 	year: 2020,
 	subtitle: "An cost calculator for small businesses",
 	tech: ["React 18", "SPA"],
