--- a/data/projects/costotus.mdx
+++ b/data/projects/costotus.mdx
@@ -6,10 +6,10 @@ export const metadata = {
 export const data = {
 	id: "costotus",
 	title: "Costotus - Cost Calc",
-	year: 2020,
+	year: 2023,
 	subtitle: "An cost calculator for small businesses",
 	tech: ["React 18", "SPA"],
-	images: ["costotus_01.jpg", "costotus_02.jpg"],
+	images: ["costotus_cover.jpg", "costotus_01.png", "costotus_02.png", "costotus_03.png", "costotus_04.png", "costotus_05.png"],
 	link: "https://www.costotus.com",
 };
 
