Added most projects

--- a/data/projects/costotus.mdx
+++ b/data/projects/costotus.mdx
@@ -7,17 +7,17 @@ export const metadata = {
 export const data = {
 	id: "costotus",
 	title: "Costotus.com - Cost Calculator",
-	year: 2023,
+	year: 2022,
 	subtitle:
 		"An app for small manufacturing businesses to keep track of their expenses and calculate manufacturing costs.",
 	tech: ["React 18", "Tailwind", "Context Api", "SPA"],
 	images: [
 		"costotus_cover.jpg",
-		"costotus_01.png",
-		"costotus_02.png",
-		"costotus_03.png",
-		"costotus_04.png",
-		"costotus_05.png",
+		"costotus_01.jpg",
+		"costotus_02.jpg",
+		"costotus_03.jpg",
+		"costotus_04.jpg",
+		"costotus_05.jpg",
 	],
 	link: "https://www.costotus.com",
 };
