--- a/data/projects/donisdev.mdx
+++ b/data/projects/donisdev.mdx
@@ -17,7 +17,7 @@ export const data = {
 		"Static Site Generation",
 		"MDX",
 	],
-	images: ["donisdev_cover.png"],
+	images: ["donisdev_cover.jpg"],
 	link: "https://www.donis.dev",
 	repo: "https://github.com/donis3/donis-homepage",
 };
@@ -68,7 +68,7 @@ export const data = {
 	subtitle:
 		"My personal portfolio developed using Next.js 14, Tailwind CSS, and MDX for content management.",
 	tech: ["Next.Js", "App Router"],
-	images: ["donisdev_cover.png"],
+	images: ["donisdev_cover.jpg"],
 	link: "https://www.donis.dev",
 	repo: "https://github.com/donis3/donis-homepage",
 };
