- configured remark-read-time for blog posts - blog post page design changes -added first blog post

--- a/data/posts/_example.mdx
+++ b/data/posts/_example.mdx
@@ -3,11 +3,10 @@ export const metadata = {
 	description: "A nice one",
 };
 
-export const data = {
+export const details = {
 	id: "nextjs_blog", //Must be the same as filename!
 	title: "How to create a static blog page with next.js and mdx",
 	date: new Date("2020-12-01"),
-	readDuration: 14,
 	link: { href: "http://www.google.com", text: "Read at Dev.to" },
 	cover: "nextjs_blog_cover.jpg",
 	description: "Laboris voluptate minim excepteur laborum.",
