Add new blog post typo fixes

--- a/data/posts/next_static_github_pages.mdx
+++ b/data/posts/next_static_github_pages.mdx
@@ -27,7 +27,7 @@ There are some usage limitations for github-pages that you might want to read [h
 
 ## Github Repo
 
-If you want to visit the final product and explore the code yourself or just clone the project and make your own blog, go to the github repo [**here.**](https://github.com/donis3/next-mdx-static-blog)
+If you want to visit the final product and explore the code yourself or just clone the project and make your own blog; visit the github repo [**here.**](https://github.com/donis3/next-mdx-static-blog)
 
 You may also visit the blog site deployed to github-pages in its final form [**here.**](https://donis3.github.io/next-mdx-static-blog/blog)
 
@@ -246,6 +246,6 @@ Et voila! all relative url's are now working
 ## How it all works
 
 Thanks to github workflows, we've just implemented our continuous integration and continuous deployment (CI/CD) pipeline.
-When we make a change like add a new mdx file blog post and commit our repo to github, github actions will start thew workflow process.
+When we make a change like add a new mdx file blog post and commit our repo to github, github actions will start the workflow process.
 It'll create a virtual machine, install all our dependencies, run the `next build` command and deploy the `/out` folder to github-pages.
 Once we've set this up, everything is automated and we get all this for free. Thanks GitHub!
