--- a/data/projects/dondefender.mdx
+++ b/data/projects/dondefender.mdx
@@ -19,7 +19,7 @@ export const data = {
 # dondefender Project
 
 Welcome to don defender. This is a project based on the tutorial from [Devslopes Unity 3D](https://www.udemy.com/course/devslopes-unity3d/) course.
-I've added a few more system on top of the tutorial. It was a great learning opportunity.
+I've added a few more systems on top of the tutorial. It was a great learning opportunity.
 
 ![Gameplay of DonDefender](/assets/projects/dondefender/dondefender_gameplay.gif)
 
