--- a/projects/dartofon/content.mdx
+++ b/projects/dartofon/content.mdx
@@ -4,11 +4,13 @@ description: A mobile-first dart score keeping application built with Next.js Ap
 keywords: dart, score keeping, mobile app, Next.js, SPA, localStorage, Zustand
 author: Deniz
 date: 2025-11-26
+tags: [Next.js, SPA, Zustand, Dart, Mobile App]
 ---
 
 # Dartofon
 
 Dartofon is a mobile-first dart score keeping application designed to be easy to use and intuitive for dart players. Built as a Single Page Application (SPA) using Next.js App Router with static export, it provides a seamless experience across devices.
+
 
 ## Key Features
 
