Refactor code structure for improved readability and maintainability

--- a/projects/dartofon/content.mdx
+++ b/projects/dartofon/content.mdx
@@ -1,16 +1,20 @@
 ---
 title: Dartofon - Dart Score Keeping App
-description: A mobile-first dart score keeping application built with Next.js App Router, featuring static export as an SPA. Supports 101x and ladder modes with local storage persistence using Zustand.
+description: A mobile-first dart score keeping application built with Next.js. Features classic 101x and ladder modes.
 keywords: dart, score keeping, mobile app, Next.js, SPA, localStorage, Zustand
 author: Deniz
 date: 2025-11-26
 tags: [Next.js, SPA, Zustand, Dart, Mobile App]
+shortDescription: Dartofon is a mobile-first dart score keeping app built with Next.js App Router, featuring 101x and ladder modes, and local storage persistence using Zustand.
+shortTitle: Dartofon
+techStack: [Next.js, Zustand, SPA, LocalStorage]
+projectUrl: "https://dartofon.com"
+githubUrl: "https://github.com/deniz/dartofon"
 ---
 
 # Dartofon
 
 Dartofon is a mobile-first dart score keeping application designed to be easy to use and intuitive for dart players. Built as a Single Page Application (SPA) using Next.js App Router with static export, it provides a seamless experience across devices.
-
 
 ## Key Features
 
