--- a/projects/vibevenue/content.mdx
+++ b/projects/vibevenue/content.mdx
@@ -1,9 +1,13 @@
 ---
 title: VibeVenue - Event Kiosk Software
-description: A comprehensive company website showcasing VibeVenue's web-based kiosk software for events and venues. Features interactive kiosks with games, AI photobooths, and more. Built with Next.js 16, Tailwind CSS 4, Drizzle ORM, SQLite, Auth.js, Google OAuth, and AWS SES.
+description: A comprehensive company website showcasing VibeVenue's web-based kiosk software for events and venues.
 keywords: event kiosk, venue software, web kiosk, AI photobooth, interactive games, Next.js, Tailwind CSS, Drizzle ORM, SQLite, Auth.js, Google OAuth, AWS SES
 author: Deniz
 date: 2025-11-26
+tags: [Next.js, Tailwind CSS, Drizzle ORM, SQLite, Auth.js, AWS SES, Event Kiosk]
+shortDescription: VibeVenue is a company website showcasing web-based kiosk software for events and venues
+shortTitle: VibeVenue
+techStack: [Next.js 16, Tailwind CSS 4, Drizzle ORM, SQLite, Auth.js, AWS SES]
 ---
 
 # VibeVenue
