feat: implement featured projects display with enhanced project item component and carousel functionality

--- a/projects/dartofon/content.mdx
+++ b/projects/dartofon/content.mdx
@@ -10,6 +10,7 @@ shortTitle: Dartofon
 techStack: [Next.js, Zustand, SPA, LocalStorage]
 projectUrl: "https://dartofon.com"
 githubUrl: "https://github.com/deniz/dartofon"
+isFeatured: true
 ---
 
 # Dartofon
