Add vibevenue thumbnail image generated by AI

--- a/projects/dartofon/content.mdx
+++ b/projects/dartofon/content.mdx
@@ -3,13 +3,12 @@ title: Dartofon - Dart Score Keeping App
 description: A mobile-first dart score keeping application built with Next.js. Features classic 101x and ladder modes.
 keywords: dart, score keeping, mobile app, Next.js, SPA, localStorage, Zustand
 author: Deniz
-date: 2025-11-26
-tags: [Next.js, SPA, Zustand, Dart, Mobile App]
-shortDescription: Dartofon is a mobile-first dart score keeping app built with Next.js App Router, featuring 101x and ladder modes, and local storage persistence using Zustand.
+date: 2025-03-15
+tags: [Next.js, SPA, Hobby Project]
+shortDescription: Dartofon is a mobile-first dart score keeping single-page application, featuring 101x and ladder modes, and local storage persistence using Zustand.
 shortTitle: Dartofon
-techStack: [Next.js, Zustand, SPA, LocalStorage]
+techStack: [Next.js, React, Zustand, SPA, LocalStorage, next-intl]
 projectUrl: "https://dartofon.com"
-githubUrl: "https://github.com/deniz/dartofon"
 isFeatured: true
 ---
 
@@ -23,15 +22,9 @@ Dartofon is a mobile-first dart score keeping application designed to be easy to
 - **Two Game Modes**:
    - **101x**: Standard dart scoring where players start at 101 and subtract their scores until reaching zero.
    - **Ladder**: A competitive mode where players climb up a ladder by hitting specific targets.
+- **Player Management**: Remembers previously added players and enables easy addition, removal, and reordering of players.
 - **Local Storage Persistence**: All game data is saved locally using Zustand for state management, ensuring your progress is never lost.
+- **Multilingual Support**: Provides English and Turkish language options with cookie-based persistence.
 - **Static Export**: Deployed as a static site, making it fast to load and easy to host.
-
-## Technical Stack
-
-- **Framework**: Next.js with App Router
-- **Export Type**: Static SPA
-- **State Management**: Zustand
-- **Storage**: Browser LocalStorage
-- **Styling**: Mobile-responsive design
 
 This app makes keeping score during dart games effortless, whether you're playing casually or in a tournament setting.
