--- a/projects/vibevenue/content.mdx
+++ b/projects/vibevenue/content.mdx
@@ -1,16 +1,26 @@
 ---
-title: VibeVenue - Event Kiosk Software
+title: VibeVenue - Fun kiosk apps for events and venues
 description: A comprehensive company website showcasing VibeVenue's web-based kiosk software for events and venues.
 keywords: event kiosk, venue software, web kiosk, AI photobooth, interactive games, Next.js, Tailwind CSS, Drizzle ORM, SQLite, Auth.js, Google OAuth, AWS SES
 author: Deniz
-date: 2025-10-26
-tags: [Next.js, Tailwind CSS, Drizzle ORM, SQLite, Auth.js, AWS SES, Event Kiosk]
+date: 2025-10-01
+tags: [Next.js, Full-Stack, Commercial Project]
 shortDescription: VibeVenue is a company website showcasing web-based kiosk software for events and venues
 shortTitle: VibeVenue
-techStack: [Next.js 16, Tailwind CSS 4, Drizzle ORM, SQLite, Auth.js, AWS SES]
+techStack:
+   [
+      Next.js 16,
+      Tailwind CSS 4,
+      Drizzle ORM,
+      SQLite,
+      Auth.js,
+      AWS SES,
+      Webhooks,
+      OpenAI,
+   ]
+isFeatured: true
+projectUrl: "https://vibevenue.com.tr"
 ---
-
-# VibeVenue
 
 VibeVenue is our company website that showcases our innovative web-based kiosk software solutions for events and venues. We specialize in creating engaging, interactive experiences that enhance guest experiences at various occasions.
 
@@ -22,13 +32,6 @@ Our kiosk software includes:
 - **AI Photobooths**: Advanced photobooth experiences powered by AI for creative and memorable photo sessions.
 - **Custom Kiosk Solutions**: Tailored web-based kiosks for check-ins, information displays, and more.
 
-## Technical Stack
-
-- **Framework**: Next.js 16
-- **Styling**: Tailwind CSS 4
-- **Database**: SQLite with Drizzle ORM
-- **Authentication**: Auth.js with Google OAuth integration
-- **Email Service**: AWS SES for reliable email communications
 
 ## Admin Panel Features
 
