Added new projects and sitemap generation

--- a/projects/dartofon/content.mdx
+++ b/projects/dartofon/content.mdx
@@ -10,6 +10,7 @@ shortTitle: Dartofon
 techStack: [Next.js, React, Zustand, SPA, LocalStorage, next-intl]
 projectUrl: "https://dartofon.com"
 isFeatured: true
+featureOrder: 3
 ---
 
 
