--- a/projects/vibevenue/content.mdx
+++ b/projects/vibevenue/content.mdx
@@ -20,6 +20,7 @@ techStack:
    ]
 isFeatured: true
 projectUrl: "https://vibevenue.com.tr"
+featureOrder: 4
 ---
 
 VibeVenue is our company website that showcases our innovative web-based kiosk software solutions for events and venues. We specialize in creating engaging, interactive experiences that enhance guest experiences at various occasions.
