--- a/projects/brawlquest/content.mdx
+++ b/projects/brawlquest/content.mdx
@@ -10,6 +10,7 @@ shortTitle: BrawlQuest
 techStack: [Next.js, i18next]
 projectUrl: "https://brawlquest.com"
 isFeatured: true
+featureOrder: 2
 ---
 
 # BrawlQuest
