feat: update tags in content files for BrawlQuest, Costotus, Dartofon, and Gorel.im to enhance project categorization

--- a/projects/brawlquest/content.mdx
+++ b/projects/brawlquest/content.mdx
@@ -4,7 +4,7 @@ description: Track your brawl stars progress with BrawlQuest, a web app that hel
 keywords: brawl stars, progress tracker, web app, brawlers, trophies, game stats, brawl progress
 author: Deniz Özkan
 date: 2024-06-07
-tags: [Next.js, Full-Stack, Hobby Project]
+tags: [Next.js, Full-Stack, Hobby Project, Gaming]
 shortDescription: BrawlQuest is a web app that helps you monitor your BrawlStars mobile game progress, including brawlers, trophies, coin spent, gadgets owned and much more.
 shortTitle: BrawlQuest
 techStack: [Next.js, i18next]
@@ -12,8 +12,6 @@ projectUrl: "https://brawlquest.com"
 isFeatured: true
 featureOrder: 2
 ---
-
-# BrawlQuest
 
 BrawlQuest is a full-stack Next.js application hosted on a VPS that has been actively updated for around 2 years, keeping pace with the Brawl Stars mobile game updates. Built using Next.js App Router, it provides a seamless experience across devices for tracking your Brawl Stars progress.
 
