--- a/projects/costotus/content.mdx
+++ b/projects/costotus/content.mdx
@@ -4,7 +4,7 @@ description: A browser-based cost calculator for small businesses to track expen
 keywords: cost calculator, small business, expense tracker, recipe management, product cost, React, SPA, multi-currency
 author: Deniz Özkan
 date: 2022-02-11
-tags: [React, SPA, Utility]
+tags: [React, SPA, Hobby Project, Business]
 shortDescription: A browser-based cost calculator for small businesses to track expenses and calculate product costs.
 shortTitle: Costotus
 techStack: [React 17, React Router 6, Context API, DaisyUI, i18next, Chart.js]
@@ -14,7 +14,6 @@ isFeatured: false
 featureOrder: 5
 ---
 
-# Costotus
 
 Costotus is a client-side cost calculator designed to help small businesses manage their finances and production costs effectively. Built with React, it offers a suite of tools to track expenses, manage inventory, and calculate product profitability.
 
