--- a/projects/dartofon/content.mdx
+++ b/projects/dartofon/content.mdx
@@ -4,7 +4,7 @@ description: A mobile-first dart score keeping application built with Next.js. F
 keywords: dart, score keeping, mobile app, Next.js, SPA, localStorage, Zustand
 author: Deniz
 date: 2025-03-15
-tags: [Next.js, SPA, Hobby Project]
+tags: [Next.js, SPA, Hobby Project, Gaming]
 shortDescription: Dartofon is a mobile-first dart score keeping single-page application, featuring 101x and ladder modes, and local storage persistence using Zustand.
 shortTitle: Dartofon
 techStack: [Next.js, React, Zustand, SPA, LocalStorage, next-intl]
