--- a/projects/gorelim/content.mdx
+++ b/projects/gorelim/content.mdx
@@ -4,7 +4,7 @@ description: Gorel.im is a link shortener web app that provides easy and efficie
 keywords: link shortener, URL shortening, web app, link management, link tracking, Next.js, React
 author: Deniz Özkan
 date: 2025-06-03
-tags: [Next.js, Full-Stack, Hobby Project]
+tags: [Next.js, Full-Stack, Hobby Project, Utility]
 shortDescription: Gorel.im is a link shortener web app that provides easy and efficient URL shortening services with advanced features for managing and tracking your links.
 shortTitle: Gorel.im
 techStack:
